--- a/Grossary/app/src/main/res/values/strings.xml
+++ b/Grossary/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Grossary</string>
     <string name="textview">TextView</string>
     <string name="todo">TODO</string>
+    <string name="title">Title</string>
+    <string name="price">Price</string>
+    <string name="description">Description</string>
 </resources>
